[gd_scene load_steps=18 format=3 uid="uid://ctbg3r2yuyiqv"]

[ext_resource type="Script" path="res://scenes/enemy_slime.gd" id="1_jegw2"]
[ext_resource type="Texture2D" uid="uid://bfmd1soivmlg7" path="res://sprites/dead_fire_spr_0.png" id="2_a2moj"]
[ext_resource type="Texture2D" uid="uid://cxc5th2r8hfpc" path="res://sprites/dead_fire_spr_1.png" id="3_f5ek4"]
[ext_resource type="Texture2D" uid="uid://deqbcbnajy7k5" path="res://sprites/dead_fire_spr_2.png" id="4_4di4s"]
[ext_resource type="Texture2D" uid="uid://dowyrgu761nwa" path="res://sprites/horu/images/enemy_slime1.png" id="5_waerx"]
[ext_resource type="Texture2D" uid="uid://djndvirgckwu6" path="res://sprites/horu/images/enemy_slime2.png" id="6_80xah"]
[ext_resource type="Texture2D" uid="uid://bk6bwpduv7w18" path="res://sprites/horu/images/enemy_slime_eating1.png" id="6_t2dhg"]
[ext_resource type="Texture2D" uid="uid://dwiofkctfb0b6" path="res://sprites/horu/images/enemy_slime_eating2.png" id="7_0bs3m"]
[ext_resource type="Texture2D" uid="uid://cwhacwkjf4t5a" path="res://sprites/horu/images/enemy_slime3.png" id="7_e4dtg"]
[ext_resource type="Texture2D" uid="uid://capc1hdlw0gpl" path="res://sprites/horu/images/stars1.png" id="20_mk7iv"]
[ext_resource type="Texture2D" uid="uid://caxf4k5okg3cr" path="res://sprites/horu/images/stars2.png" id="21_rbouk"]
[ext_resource type="Texture2D" uid="uid://bpaljgkr5iu14" path="res://sprites/horu/images/stars3.png" id="22_wfvsn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0vk2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a2moj")
}, {
"duration": 1.0,
"texture": ExtResource("3_f5ek4")
}, {
"duration": 1.0,
"texture": ExtResource("4_4di4s")
}],
"loop": true,
"name": &"dead_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_waerx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_t2dhg")
}, {
"duration": 1.0,
"texture": ExtResource("7_0bs3m")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_waerx")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_waerx")
}, {
"duration": 1.0,
"texture": ExtResource("6_80xah")
}, {
"duration": 1.0,
"texture": ExtResource("7_e4dtg")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44h00"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xk4x"]
size = Vector2(382, 144.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_6yeio"]
radius = 30.0167

[sub_resource type="SpriteFrames" id="SpriteFrames_4xq1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_mk7iv")
}, {
"duration": 1.0,
"texture": ExtResource("21_rbouk")
}, {
"duration": 1.0,
"texture": ExtResource("22_wfvsn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EnemySlime" type="CharacterBody2D"]
script = ExtResource("1_jegw2")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0vk2b")
animation = &"killing"
autoplay = "dead_fire"
frame_progress = 0.0130304

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_44h00")

[node name="AreaDetect" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="AreaDetect"]
position = Vector2(166, -55.75)
shape = SubResource("RectangleShape2D_5xk4x")

[node name="Area" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 33

[node name="collider" type="CollisionShape2D" parent="Area"]
position = Vector2(1, -4)
shape = SubResource("CircleShape2D_6yeio")

[node name="stars_stunned" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_4xq1w")
autoplay = "default"
frame_progress = 0.742572

[connection signal="body_entered" from="AreaDetect" to="." method="_on_area_detect_body_entered"]
[connection signal="body_exited" from="AreaDetect" to="." method="_on_area_detect_body_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
